force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <displayFormat>APL-{000000}-{YYYY}</displayFormat>
        <label>Applicant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>